--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/blueberrymuffin.html">Blueberry muffins to DIE for</a>
+    <ul>
+        <li><a href="recipes/blueberrymuffin.html">Blueberry muffins to DIE for</a></li>
+        <li><a href="recipes/sangria.html">Sangria! Sangria!</a></li>
+        <li><a href="recipes/lumpia.html">Traditional Filipino Lumpia</a></li>
+    </ul>
 </body>
 </html>
